Fix linked items hidden behind navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
 body {
     font-family: var(--primary-font);
     /* Leave room for the fixed navbar */
-    padding-top: 58px;
+    padding-top: 57.72px;
 }
 
 #navbar {
@@ -54,6 +54,8 @@ section {
     padding: 1rem;
     margin: 2rem 0;
     background: #f2fff2;
+    /* When js is disabled, ensure that internal links aren't hidden behind navbar */
+    scroll-margin-top: 80px;
 }
 
 /* A button that is full-width until the screen reaches large (992px) */
